--- a/WebContent/kitchen.html
+++ b/WebContent/kitchen.html
@@ -137,7 +137,7 @@ var functions;
    		 //d3 can't formally automatically fit text into shapes...
 		function draw_currentstep(text){	
    			var x = text.slice(0 , 65);	
-			group.append("text")
+				.append("text")
 				.attr("class", "current_text")
 				.attr("x", 0)
 				.attr("y", 50)
